Add for 3.0.4:   alphaev67-dec-osf5.1   i386-unknown-freebsd4.4   i586-pc-linux-gnu (k6) (Red Hat 7.0 with upgrades, glibc 2.2.4)   i686-pc-linux-gnu (Athlon) (Red Hat 7.2, glibc 2.2.4, kernel 2.4.14)

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -128,7 +128,8 @@ Successful (C, C++, F77, Java):
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-07/msg00432.html">3.0</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2001-12/msg00762.html">3.0.2</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg00664.html">3.0.3</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg00664.html">3.0.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01610.html">3.0.4</a></td>
 </tr>
 
 <tr>
@@ -279,7 +280,8 @@ Successful (C):
 <td>i386-unknown-freebsd4.4</td>
 <td>&nbsp;</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00610.html">3.0.3</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00610.html">3.0.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01581.html">3.0.4</a></td>
 </tr>
 
 <tr>
@@ -357,7 +359,8 @@ Successful (C):
 <td>Red Hat 7.0 with upgrades, glibc 2.2.4</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-11/msg00214.html">3.0.2</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00242.html">3.0.3</a>;
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00242.html">3.0.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01517.html">3.0.4</a>;
 Unsuccessful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-12/msg00363.html">3.0 and 3.0.1</a></td>
 </tr>
@@ -582,6 +585,13 @@ Successful with modifications:
 <td>Red Hat 7.2, glibc 2.2.4, kernel 2.4.17</td>
 <td>Successful (C, C++, ObjC):
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01140.html">3.0.3</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu (Athlon)</td>
+<td>Red Hat 7.2, glibc 2.2.4, kernel 2.4.14</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01596.html">3.0.4</a></td>
 </tr>
 
 <tr>
