Update ELF gABI link.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -494,7 +494,7 @@ tahoe. These are listed here just for completeness.
 
   <li><a href="http://www.almaden.ibm.com/journal/">IBM Journal of Research and Development</a></li>
 
-  <li><a href="http://www.sco.com/developer/gabi/">The System V Application Binary Interface</a></li>
+  <li><a href="http://www.caldera.com/developers/gabi/">The System V Application Binary Interface</a>, aka the ELF Generic ABI Specification.</li>
 
   <li><a href="http://www.esofta.com/softspecs.html">System V PowerPC ABI</a></li>
 
