--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -147,6 +147,13 @@ Successful (C, C++, F77, Java):
 </tr>
 
 <tr>
+<td>armv5l-unknown-linux-gnu (xscale)</td>
+<td>glibc 2.2.5</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01641.html">3.0.4</a></td>
+</tr>
+
+<tr>
 <td>hppa1.1-hp-hpux10.10</td>
 <td>&nbsp;</td>
 <td>Successful (except fastjar):
@@ -172,7 +179,9 @@ Successful (C, C++, F77, Java):
 <td>hppa2.0-hp-hpux10.20</td>
 <td>&nbsp;</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2001-07/msg00390.html">3.0</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2001-07/msg00390.html">3.0</a>;
+Successful (simple make of C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01651.html">3.0.4</a></td>
 </tr>
 
 <tr>
@@ -182,7 +191,9 @@ Successful (C, C++, F77, Java):
 <a href="http://gcc.gnu.org/ml/gcc/2001-08/msg00193.html">3.0</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00621.html">3.0.3</a>;
 Successful (C):
-<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01290.html">3.0.3</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01290.html">3.0.3</a>;
+Successful (C, C++, F77, Java):</td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01633.html">3.0.4</a></td>
 </tr>
 
 <tr>
@@ -679,11 +690,12 @@ Successful with modifications:
 </tr>
 
 <tr>
-<td>ia64-unknown-linux</td>
+<td>ia64-unknown-linux-gnu</td>
 <td>Red Hat 7.1.94, glibc 2.2.4</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-09/msg00863.html">3.0.1</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00281.html">3.0.3</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00281.html">3.0.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01623.html">3.0.4</a></td>
 </tr>
 
 <tr>
@@ -817,7 +829,9 @@ Successful (C,C++):
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-08/msg00842.html">3.0</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01024.html">3.0.1</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00338.html">3.0.3</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00338.html">3.0.3</a>;
+Successful (C, C++, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01622.html">3.0.4</a></td>
 </tr>
 
 <tr>
