Remove an extra tag added in the previous checkin.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -192,7 +192,7 @@ Successful (simple make of C, C++):
 <a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00621.html">3.0.3</a>;
 Successful (C):
 <a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01290.html">3.0.3</a>;
-Successful (C, C++, F77, Java):</td>
+Successful (C, C++, F77, Java):
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01633.html">3.0.4</a></td>
 </tr>
 
