Add for 3.0.4:   hppa2.0w-hp-hpux11.00   powerpc-ibm-aix4.3.3.0

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -179,7 +179,8 @@ Successful (C, C++, F77, Java):
 <td>hppa2.0-hp-hpux10.20</td>
 <td>&nbsp;</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2001-07/msg00390.html">3.0</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2001-07/msg00390.html">3.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01670.html">3.0.4</a></td>
 </tr>
 
 <tr>
@@ -734,7 +735,8 @@ Successful (C,C++):
 <td>powerpc-ibm-aix4.3.3.0</td>
 <td>&nbsp;</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2001-10/msg00647.html">3.0.1</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2001-10/msg00647.html">3.0.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01661.html">3.0.4</a></td>
 </tr>
 
 <tr>
