Add C99 status page for 3.1.

--- a/htdocs/gcc-3.1/c99status.html
+++ b/htdocs/gcc-3.1/c99status.html
@@ -17,11 +17,9 @@ library support, or desirable in conjunction with it.  Note that the
 headers required of conforming freestanding implementations (clause 4
 paragraph 6) do not count as library issues.</p>
 
-<p>This page describes the C99 support in mainline GCC CVS, not in any
-particular release.  Information is also available on <a
-href="gcc-3.1/c99status.html">C99 support in GCC 3.1</a> and on <a
-href="gcc-3.0/c99status.html">C99 support in GCC 3.0</a>, but not on
-the much more limited support in GCC 2.95.</p>
+<p>This page describes the C99 support in GCC 3.1.  Information on <a
+href="../c99status.html">C99 support in mainline CVS GCC</a> is also
+available.</p>
 
 <p>See below the table for further notes on some issues.</p>
 
