Add 3.0.4 entries for:   hppa2.0w-hp-hpux11.00   i686-pc-linux-gnu (Red Hat 7.2, glibc 2.2.4, kernel 2.4.9)   i686-pc-linux-gnu (Slackware 8.0, glibc 2.2.4, kernel 2.4.17)   i686-pc-linux-gnu (Sorcerer 20020227, glibc 2.2.5, kernel 2.4.17)
Add more information to the entry for armv5l-unknown-linux-gnu (xscale).

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -158,7 +158,7 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>armv5l-unknown-linux-gnu (xscale)</td>
-<td>glibc 2.2.5</td>
+<td>LFS 3.0 (Linux from Scratch), glibc 2.2.5, kernel 2.4.16</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01641.html">3.0.4</a>
 <br>Test results:
@@ -192,7 +192,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>hppa2.0-hp-hpux10.20</td>
 <td>&nbsp;</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2001-07/msg00390.html">3.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2001-07/msg00390.html">3.0</a>;
+<br>Successful (C, C++):
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01670.html">3.0.4</a></td>
 </tr>
 
@@ -205,7 +206,10 @@ Installing GCC: Final Installation</a>.</p>
 <br>Successful (C):
 <a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01290.html">3.0.3</a>;
 <br>Successful (C, C++, F77, Java):
-<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01633.html">3.0.4</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01633.html">3.0.4</a>;
+<br>Successful (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01670.html">3.0.4</a>
+</td>
 </tr>
 
 <tr>
@@ -617,7 +621,9 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-linux-gnu</td>
 <td>Red Hat 7.2, glibc 2.2.4, kernel 2.4.9</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01188.html">3.0.4</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01188.html">3.0.4</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01799.html">3.0.4</a>
+</td>
 </tr>
 
 <tr>
@@ -675,6 +681,20 @@ Installing GCC: Final Installation</a>.</p>
 <td>Slackware 8.0, glibc 2.2.4, kernel 2.4.17</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00186.html">3.0.3</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Slackware 8.0.47, glibc 2.2.5, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01797.html">3.0.4</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Sorcerer 20020227, glibc 2.2.5, kernel 2.4.17</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01664.html">3.0.4</a></td>
 </tr>
 
 <tr>
@@ -797,7 +817,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-10/msg00647.html">3.0.1</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01661.html">3.0.4</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01661.html">3.0.4</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01701.html">3.0.4</a></td>
 </tr>
 
 <tr>
