2002-02-28  Alexandre Petit-Bianco  <apbianco@redhat.com>
        * index.html (GCJ News): Mentionned Bryce's array check
        improvements.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -72,6 +72,17 @@ can see the <a href="libgcj-classpath-compare.html">status of the merge</a>.)
 <!-- News entries start here -->
 
 <tr><td valign="top">
+<b>February 28, 2002</b>
+</td><td>
+Bryce McKinlay has contributed a patch to optimize some of the array
+access and added a new compiler flag, <code>--no-store-check</code>,
+to disable assignability checks for stores into object arrays. With
+code that is known not to throw <code>ArrayStoreException</code>, this
+flag can be used to disable the check operations. In which case it can
+provide a reasonable performance boost and slight code size reduction.
+</td><tr>
+
+<tr><td valign="top">
 <b>January 22, 2002</b>
 </td><td>
 Tom Tromey has contributed a patch to allow certain Java method calls
