--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -331,6 +331,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i486-pc-linux-gnu</td>
+<td>CAEN Linux 6.1, glibc 2.1.3, kernel 2.2.19</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg00059.html">3.0.4</a></td>
+</tr>
+
+<tr>
 <td>i486-suse-linux-gnu</td>
 <td>SuSE 7.1, glibc 2.2, kernel 2.4.x</td>
 <td>Successful:
@@ -485,6 +492,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i686-pc-cygwin</td>
+<td>Cygwin-1.3.10-1 on WinXP Pro</td>
+<td>Successful (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg00037.html">3.0.4</a></td>
+</tr>
+
+<tr>
 <td>i686-pc-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
@@ -545,6 +559,13 @@ Installing GCC: Final Installation</a>.</p>
 <td>Mandrake 8.1, glibc 2.2.4, kernel 2.4.17</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-01/msg01332.html">3.0.3</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Mandrake 8.2 beta 2, glibc 2.2.4, kernel 2.4.17</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg00026.html">3.0.4</a></td>
 </tr>
 
 <tr>
