Add entries for 3.0.4:   i686-pc-linux-gnu (Mandrake 8.1, glibc 2.2.4, kernel 2.4.8)   powerpc-unknown-linux-gnu (Yellow Dog 2.1, glibc 2.2.4, kernel 2.4.18)   sparc-sun-solaris2.5.1

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -551,7 +551,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>Mandrake 8.1, glibc 2.2.4, kernel 2.4.8</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-11/msg00843.html">3.0.2</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01330.html">3.0.3</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01330.html">3.0.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg00188.html">3.0.4</a></td>
 </tr>
 
 <tr>
@@ -878,6 +879,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>powerpc-unknown-linux-gnu</td>
+<td>Yellow Dog 2.1, glibc 2.2.4, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg00166.html">3.0.4</a></td>
+</tr>
+
+<tr>
 <td>rs6000-ibm-aix4.3.3.0</td>
 <td>&nbsp;</td>
 <td>Successful:
@@ -916,7 +924,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>sparc-sun-solaris2.5.1</td>
 <td>&nbsp;</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg00760.html">3.0</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2001-08/msg00760.html">3.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg00136.html">3.0.4</a></td>
 </tr>
 
 <tr>
