--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -493,6 +493,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-cygwin</td>
+<td>Cygwin-1.3.10 on Windows 2000 5.0</td>
+<td>Successful (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg00197.html">3.0.3</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-cygwin</td>
 <td>Cygwin-1.3.10-1 on WinXP Pro</td>
 <td>Successful (C, C++):
 <a href="http://gcc.gnu.org/ml/gcc/2002-03/msg00037.html">3.0.4</a></td>
