Remove email address

--- a/htdocs/gcc-3.1/issues.html
+++ b/htdocs/gcc-3.1/issues.html
@@ -27,8 +27,7 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  >http://gcc.gnu.org/ml/gcc-patches/2002-02/msg01568.html</a> is
  alleged to fix important bugs and requires review.</p>
 
- <p>Submitted by <a href="mailto:dje@watson.ibm.com">David
- Edelsohn</a>.</p>
+ <p>Submitted by David Edelsohn.</p>
 </dd>
 
 <dt><em>PR optmization/5844</em>
@@ -38,24 +37,21 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>See <a href="http://gcc.gnu.org/ml/gcc-bugs/2002-03/msg00192.html"
  >http://gcc.gnu.org/ml/gcc-patches/2002-02/msg01568.html</a>.</p>
 
- <p>Submitted by <a href="mailto:hjl@lucon.org">H.J. Lu</a>.</p>
+ <p>Submitted by H.J. Lu.</p>
 </dd>
 
 <dt><em>PR 5858</em>
 <dd>
  <p><em>Unverified.</em></p>
 
- <p>Submitted by <a
- href="mailto:Theodore.Papadopoulo@sophia.inria.fr">Theodore
- Papadopoulo</a>.</p>
+ <p>Submitted by Theodore Papadopoulo.</p>
 </dd>
 
 <dt><em>PR 5753</em>
 <dd>
  <p><em>Unverified.</em></p>
 
- <p>Submitted by <a
- href="mailto:pbarada@mail.wm.sps.mot.com">Peter Barada</a>.</p>
+ <p>Submitted by Peter Barada.</p>
 </dd>
 
 <dt><em>PR target/5626</em>
@@ -64,8 +60,7 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
 
  <p>GCC 3.1 on SparcV9 does not generate code for long jumps.</p>
 
- <p>Submitted by <a href="mailto:lucier@math.purdue.edu">Brad
- Lucier</a>.</p>
+ <p>Submitted by Brad Lucier.</p>
 </dd>
 
 <dt><em>PR target/5312</em>
@@ -74,7 +69,7 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
 
  <p>Prevents compilation of the Linux kernel.</p>
 
- <p>Submitted by <a href="mailto:schwab@suse.de">Andreas Schwab</a>.</p>
+ <p>Submitted by Andreas Schwab.</p>
 </dd>
 </dl>
 
