Add entries for 3.0.4:   i586-pc-linux-gnu (Red Hat 7.2, glibc 2.2.4, kernel 2.4.7)   i686-pc-linux-gnu (homebrew GNU/Linux, glibc 2.2.5, kernel 2.4.18)

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -427,6 +427,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i586-pc-linux-gnu</td>
+<td>Red Hat 7.2, glibc 2.2.4, kernel 2.4.7</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg00226.html">3.0.4</a></td>
+</tr>
+
+<tr>
 <td>i586-pld-linux-gnu</td>
 <td>PLD devel 1.0, glibc 2.2.3, kernel 2.2.19</td>
 <td>Successful:
@@ -514,6 +521,13 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-02/msg00482.html">3.0.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-02/msg00459.html">3.0.4</a>
 </td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>homebrew GNU/Linux, glibc 2.2.5, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg00217.html">3.0.4</a></td>
 </tr>
 
 <tr>
