--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -679,7 +679,9 @@ Installing GCC: Final Installation</a>.</p>
 <tr>
 <td>i686-pc-linux-gnu</td>
 <td>Red Hat 7.2, glibc 2.2.4, kernel 2.4.17</td>
-<td>Successful (C, C++, ObjC):
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg00310.html">3.0.4</a>;
+<br>Successful (C, C++, ObjC):
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01140.html">3.0.3</a></td>
 </tr>
 
