Update links for pooma and MTL.

--- a/htdocs/gcc-3.1/criteria.html
+++ b/htdocs/gcc-3.1/criteria.html
@@ -211,17 +211,17 @@ different programming languages.</p>
     <td><a href="http://root.cern.ch/root/Version301.html">
         root-3.01</a></td>
 </tr>
-<tr><td><a href="">pooma-gcc</a></td>
+<tr><td><a href="http://www.acl.lanl.gov/pooma/">pooma-gcc</a></td>
     <td>C++</td>
-    <td>?</td>
-    <td><a href="">
-        ?</a></td>
+    <td>2.3.0</td>
+    <td><a href="http://www.acl.lanl.gov/distributions/pooma-2.3.0.tgz">
+        pooma-2.3.0.tgz</a></td>
 </tr>
-<tr><td><a href="">MTL</a></td>
+<tr><td><a href="http://www.osl.iu.edu/research/mtl/">MTL</a></td>
     <td>C++</td>
     <td>2.12.2.-19</td>
-    <td><a href="">
-        ?</a></td>
+    <td><a href="http://www.osl.iu.edu/research/mtl/download.php3">
+        (Download)</a></td>
 </tr>
 <tr><td><a href="http://www.trolltech.com/products/qt/index.html">Qt</a></td>
     <td>C++</td>
