--- a/htdocs/gcc-3.1/issues.html
+++ b/htdocs/gcc-3.1/issues.html
@@ -18,7 +18,7 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
 <h2>Open Issues</h2>
 
 <dl>
-<dt><em>PowerPC Reload Problem</em></dt>
+<dt><em>PR 5693</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
 
@@ -27,7 +27,7 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  >http://gcc.gnu.org/ml/gcc-patches/2002-02/msg01568.html</a> is
  alleged to fix important bugs and requires review.</p>
 
- <p>Submitted by David Edelsohn.</p>
+ <p>Submitted by Franz Sirl.</p>
 </dd>
 
 <dt><em>PR optmization/5844</em>
@@ -71,6 +71,438 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
 
  <p>Submitted by Andreas Schwab.</p>
 </dd>
+
+<dt><em>PR ada/5856</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>GNAT bug box directs reports to ACT bug-tracking system.</p>
+
+ <p>Submitted by Joseph Myers.</p>
+</dd>
+
+<dt><em>PR c/5354</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>Regression from GCC 2.95.x.  There is patch available at:
+ <a href="http://gcc.gnu.org/ml/gcc-patches/2002-02/msg00958.html"
+ >http://gcc.gnu.org/ml/gcc-patches/2002-02/msg00958.html</a>.</p>
+
+ <p>Submitted by Jakub Jelinek.</p>
+</dd>
+
+<dt><em>PR c++/5857</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>Regression from GCC 3.0.x.</p>
+
+ <p>Submitted by Jakub Jelinek.</p>
+</dd>
+
+<dt><em>PR 5687</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>Regression from GCC 3.0.</p>
+
+ <p>Submitted by Philib Blundell.</p>
+</dd>
+
+<dt><em>PR 5817</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>Duplicate typedef causes ICE.  Regression from GCC 3.0.</p>
+
+ <p>Submitted by Craig Rodrigues.</p>
+</dd>
+
+<dt><em>PR 5658</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>Regresion on redefinition of a type in a derived class.
+  Regression from GCC 3.0.</p>
+
+ <p>Submitted by Craig Rodrigues.</p>
+</dd>
+
+<dt><em>PR 5597</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>Initialization of flexible char array member.  Regression from GCC
+ 2.95.3.</p>
+
+ <p>Submitted by Craig Rodrigues.</p>
+</dd>
+
+<dt><em>SPARCV9 ICE running V3 testsuite</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>Submitted by Benjamin Kosnik.</p>
+</dd>
+
+<dt><em>Optimization Issues</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p><a href="http://gcc.gnu.org/ml/libstdc++/2002-03/msg00018.html">
+ http://gcc.gnu.org/ml/libstdc++/2002-03/msg00018.html</a>.</p>
+
+ <p>Submitted by Benjamin Kosnik.</p>
+</dd>
+
+<dt><em>PR 5656</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>ICE in emit_move_insn.  Regression from GCC 3.0.</p>
+
+ <p>Possible patch at: <a
+ href="http://gcc.gnu.org/ml/gcc-patches/2002-02/msg01508.html">
+ http://gcc.gnu.org/ml/gcc-patches/2002-02/msg01508.html</a>.</p>
+
+ <p>Submitted by Craig Rodrigues.</p>
+</dd>
+
+<dt><em>PR 5693</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>Regression from GCC 2.95.x.</p>
+
+ <p>Submitted by Franz Sirl.</p>
+</dd>
+
+<dt><em>PR 5863</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>Regression from GCC 2.95.x.</p>
+
+ <p>Submitted by Franz Sirl.</p>
+</dd>
+
+<dt><em>PR 5396</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>Performance regression on file I/O from GCC 2.95.x.</p>
+
+ <p>Submitted by Stuart Anderson.</p>
+</dd>
+
+<dt><em>PR 5682</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>ICE in build_secondary_vtable.</p>
+
+ <p>Submitted by Nathan Sidwell.</p>
+</dd>
+
+<dt><em>PR 5659</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>Default access for class/struct bug.</p>
+
+ <p>Submitted by Nathan Sidwell.</p>
+</dd>
+
+<dt><em>PR 5449</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>ICE 20000524.</p>
+
+ <p>Submitted by Nathan Sidwell.</p>
+</dd>
+
+<dt><em>PR 4460</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>EH Crash.</p>
+
+ <p>Submitted by Nathan Sidwell.</p>
+</dd>
+
+<dt><em>PR 4381</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>EH crash.</p>
+
+ <p>Submitted by Nathan Sidwell.</p>
+</dd>
+
+<dt><em>PR 4377</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>Non-type template parameter problems.</p>
+
+ <p>Submitted by Nathan Sidwell.</p>
+</dd>
+
+<dt><em>PR 4026</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>Bad code generated with optimization.</p>
+
+ <p>Submitted by Nathan Sidwell.</p>
+</dd>
+
+<dt><em>PR 4003</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>ICE on template instantiation.</p>
+
+ <p>Submitted by Nathan Sidwell.</p>
+</dd>
+
+<dt><em>PR 3882</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>Initializer error.</p>
+
+ <p>Submitted by Nathan Sidwell.</p>
+</dd>
+
+<dt><em>PR 3870</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>Specialization bug.</p>
+
+ <p>Submitted by Nathan Sidwell.</p>
+</dd>
+
+<dt><em>PR 3948</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>Too many destructor calls.</p>
+
+ <p>Submitted by Nathan Sidwell.</p>
+</dd>
+
+<dt><em>PR 3935</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>Access control bug.</p>
+
+ <p>Submitted by Nathan Sidwell.</p>
+</dd>
+
+<dt><em>PR 3230</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>Bogus warning.</p>
+
+ <p>Submitted by Nathan Sidwell.</p>
+</dd>
+
+<dt><em>PR 5651</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>G77 optimization regression on IRIX.</p>
+
+ <p>Submitted by David Billinghurst.</p>
+</dd>
+
+<dt><em>PR 5854</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>m68K showstopper preventing building libgcc.</p>
+
+ <p>Submitted by Stephane Carrez.</p>
+</dd>
+
+<dt><em>PR 5731</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>G77 SIGSEGV when optimizing.</p>
+
+ <p>Submitted by Toon Moene.</p>
+</dd>
+
+<dt><em>PR 5876</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>Java regression.</p>
+
+ <p>Submitted by Adam Megacz.</p>
+</dd>
+
+<dt><em>PR 5879</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>Java regression.</p>
+
+ <p>Submitted by Adam Megacz.</p>
+</dd>
+
+<dt><em>PR 4128</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>RTL checking bootstrap on Solaris 2.7.</p>
+
+ <p>Submitted by Kaveh Ghazi.</p>
+</dd>
+
+<dt><em>PR optimization/5768</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>SH codegen bug.</p>
+
+ <p>Submitted by Arati Dikey.</p>
+</dd>
+
+<dt><em>PR 5172</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>x86 glibc miscompilation.</p>
+
+ <p>Submitted by Andreas Jaeger.</p>
+</dd>
+
+<dt><em>PR 5200</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>Store motion bugs.</p>
+
+ <p>Submitted by Andreas Jaeger.</p>
+</dd>
+
+<dt><em>PR 5877</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>Negative offsets cause inefficient code.  Optimization regression
+ from 3.0.x.</p>
+
+ <p>Submitted by Janis Johnson.</p>
+</dd>
+
+<dt><em>PR 5891</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>ICE compiling SPEC fp with -funroll-loops on ia64.</p>
+
+ <p>Submitted by Janis Johnson.</p>
+</dd>
+
+<dt><em>PR 5892</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>ICE compiling ia64 Linux kernel.  Regression from GCC 3.0.4.</p>
+
+ <p>Submitted by Janis Johnson.</p>
+</dd>
+
+<dt><em>PR 4792</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>ICE building arc-elf.</p>
+
+ <p>Submitted by Joel Sherrill.</p>
+</dd>
+
+<dt><em>PR 3931</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>V3 does not build on avr-elf.</p>
+
+ <p>Submitted by Joel Sherrill.</p>
+</dd>
+
+<dt><em>PR 3589</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>Illegal HPPA 1.1 instructions.</p>
+
+ <p>Submitted by Joel Sherrill.</p>
+</dd>
+
+<dt><em>PR 5676</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>V3 does not build on mcor-elf.</p>
+
+ <p>Submitted by Joel Sherrill.</p>
+</dd>
+
+<dt><em>PR 3591</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>V3 does not build on mcor-elf.</p>
+
+ <p>Submitted by Joel Sherrill.</p>
+</dd>
+
+<dt><em>PR 4195</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>mn10200 fails to build libgcc.</p>
+
+ <p>Submitted by Joel Sherrill.</p>
+</dd>
+
+<dt><em>V850 ICE</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>libiberty does not build on v850.</p>
+
+ <p>Submitted by Joel Sherrill.</p>
+</dd>
+
+<dt><em>PR 4192</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>crtbegin.o does not build on fr30.</p>
+
+ <p>Submitted by Joel Sherrill.</p>
+</dd>
+
+<dt><em>PR 4191</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>crtbegin.o does not build on d30v-elf.</p>
+
+ <p>Submitted by Joel Sherrill.</p>
+</dd>
+
 </dl>
 
 </body>
