Add links to gcc 3.1 criteria and issues

--- a/htdocs/gcc-3.1/criteria.html
+++ b/htdocs/gcc-3.1/criteria.html
@@ -41,7 +41,7 @@ possible.</p>
 relative to previous releases of GCC.  Each of these improvements must
 be completed before GCC 3.1 is released:</p>
 <ul>
-<li><p>Open Bugs</p>
+<li><p><a href="issues.html">Open Bugs</a></p>
     <p>High-priority open bugs in GNATS will be fixed before the
        GCC 3.1 release.</p>
 </li>
