--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -120,8 +120,8 @@ a new <a href="gccmission.html">mission statement</a>.</p>
 <p>Currently GCC contains front ends for C, C++, Objective C, Chill,
 Fortran, and <a href="java/">Java</a>
 as well as libraries for these languages (<a href="libstdc++/">libstdc++</a>,
-libgcj,...).  The next major release, GCC 3.1, will also include an
-Ada front end.
+libgcj,...).  The next major release, <a href="gcc-3.1/criteria.html">GCC 3.1</a>, 
+will also include an Ada front end.
 </p>
 
 <p>We want to work closely with developers to help and encourage them
