--- a/htdocs/gcc-3.1/issues.html
+++ b/htdocs/gcc-3.1/issues.html
@@ -30,23 +30,6 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Franz Sirl.</p>
 </dd>
 
-<dt><em>PR optmization/5844</em>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>See <a href="http://gcc.gnu.org/ml/gcc-bugs/2002-03/msg00192.html"
- >http://gcc.gnu.org/ml/gcc-patches/2002-02/msg01568.html</a>.</p>
-
- <p>Submitted by H.J. Lu.</p>
-</dd>
-
-<dt><em>PR 5858</em>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>Submitted by Theodore Papadopoulo.</p>
-</dd>
-
 <dt><em>PR 5753</em>
 <dd>
  <p><em>Unverified.</em></p>
@@ -136,12 +119,18 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Initialization of flexible char array member.  Regression from GCC
  2.95.3.</p>
 
+ <p>Patch available at <a
+ href="http://gcc.gnu.org/ml/gcc-patches/2002-02/msg00959.html"
+ >http://gcc.gnu.org/ml/gcc-patches/2002-02/msg00959.html</a>.</p>
+
  <p>Submitted by Craig Rodrigues.</p>
 </dd>
 
-<dt><em>SPARCV9 ICE running V3 testsuite</em>
+<dt><em>PR 5740</em>
 <dd>
  <p><em>Unverified.</em></p>
+
+ <p>SPARCV9 ICE running V3 testsuite.</p>
 
  <p>Submitted by Benjamin Kosnik.</p>
 </dd>
@@ -167,15 +156,6 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  http://gcc.gnu.org/ml/gcc-patches/2002-02/msg01508.html</a>.</p>
 
  <p>Submitted by Craig Rodrigues.</p>
-</dd>
-
-<dt><em>PR 5693</em>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>Regression from GCC 2.95.x.</p>
-
- <p>Submitted by Franz Sirl.</p>
 </dd>
 
 <dt><em>PR 5863</em>
@@ -382,6 +362,8 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
 
  <p>x86 glibc miscompilation.</p>
 
+ <p>Craig Rodrigues says this issue has been resolved.</p>
+
  <p>Submitted by Andreas Jaeger.</p>
 </dd>
 
@@ -390,6 +372,8 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p><em>Unverified.</em></p>
 
  <p>Store motion bugs.</p>
+
+ <p>Craig Rodrigues says this issue has been resolved.</p>
 
  <p>Submitted by Andreas Jaeger.</p>
 </dd>
@@ -502,6 +486,65 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
 
  <p>Submitted by Joel Sherrill.</p>
 </dd>
+
+<dt><em>PR 5899</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>Preprocessor breaks building glibc.</p>
+
+ <p>Submitted by Andreas Schwab.</p>
+</dd>
+
+<dt><em>PR 5901</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>Miscompiling the Linux kernel.</p>
+
+ <p>Submitted by Andreas Schwab.</p>
+</dd>
+
+<dt><em>PR 5757</em>
+<dd>
+ <p><em>Unverified.</em></p>
+
+ <p>Throwing exceptions in construtors causes segfault.</p>
+
+ <p>Submitted by Craig Rodrigues.</p>
+</dd>
+
+</dl>
+
+<h2>Closed Issues</h2>
+
+<dl>
+<dt><em>PR 5693</em>
+<dd>
+ <p>Closed: Richard Henderson.</p>
+
+ <p>Regression from GCC 2.95.x.</p>
+
+ <p>Submitted by Franz Sirl.</p>
+</dd>
+
+<dt><em>PR optmization/5844</em>
+<dd>
+ <p>Closed: Richard Henderson.</p>
+
+ <p>See <a href="http://gcc.gnu.org/ml/gcc-bugs/2002-03/msg00192.html"
+ >http://gcc.gnu.org/ml/gcc-patches/2002-02/msg01568.html</a>.</p>
+
+ <p>Submitted by H.J. Lu.</p>
+</dd>
+
+<dt><em>PR 5858</em>
+<dd>
+ <p>-fcheck-memory-usage is not supported.</p>
+
+ <p>Submitted by Theodore Papadopoulo.</p>
+</dd>
+
 
 </dl>
 
