--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -665,7 +665,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>Red Hat 7.2, glibc 2.2.4, kernel 2.4.9</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01188.html">3.0.4</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01799.html">3.0.4</a>
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01799.html">3.0.4</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg00476.html">3.0.4</a>
 </td>
 </tr>
 
@@ -814,7 +815,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>mips-dec-ultrix4.4</td>
 <td>&nbsp;</td>
 <td>Successful (C, C++, F77):
-<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00765.html">3.0.3</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00765.html">3.0.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg00392.html">3.0.4</a></td>
 </tr>
 
 <tr>
