Use <h2> instead of nested lists to improve structure.

--- a/htdocs/gcc-3.0/features.html
+++ b/htdocs/gcc-3.0/features.html
@@ -7,8 +7,8 @@
 <body>
 <h1>GCC 3.0 New Features</h1>
 
-<ul>
-  <li>General Optimizer Improvements:
+<h2>General Optimizer Improvements</h2>
+
   <ul>
     <li><a href="../news/reorder.html">Basic block reordering
         pass</a>.</li>
@@ -28,8 +28,10 @@
         BSD functions, as well as for ISO C99 functions.</li> 
     <li>New builtin __builtin_expect for giving hints to the branch
         predictor.</li> 
-  </ul></li>
-  <li>New Languages and Language specific improvements:
+  </ul>
+
+<h2>New Languages and Language specific improvements</h2>
+
   <ul>
     <li>The GNU Compiler for the Java(TM) language (GCJ)
         is now integrated and supported, including the run-time library
@@ -73,8 +75,10 @@
     <li>Fortran improvements are listed in
         <a href="http://gcc.gnu.org/onlinedocs/g77_news.html">the Fortran
         documentation</a>.</li>
-  </ul></li>
-  <li>New Targets and Target Specific Improvements:
+  </ul>
+
+<h2>New Targets and Target Specific Improvements</h2>
+
   <ul>
     <li>New x86 back-end, generating much improved code.</li>
     <li>Support for a generic i386-elf target contributed.</li>
@@ -95,8 +99,10 @@
     <li>Port of GCC to Motorola's 68HC11 and 68HC12 processors
         contributed.</li>
     <li>Port of GCC to Sun's picoJava processor core contributed.</li>
-  </ul></li>
-  <li>Documentation improvements:
+  </ul>
+
+<h2>Documentation improvements</h2>
+
   <ul>
     <li>Substantially rewritten and improved C preprocessor
         manual.</li>
@@ -113,8 +119,10 @@
         alongside their Texinfo sources, avoiding problems on some
         platforms with building <code>makeinfo</code> as part of the
         GCC distribution.</li>
-  </ul></li>
-  <li>Other significant improvements:
+  </ul>
+
+<h2>Other significant improvements</h2>
+
   <ul>
     <li>Garbage collection used internally by the compiler for most memory
         allocation instead of obstacks.</li>
@@ -141,11 +149,13 @@
         <code>-Wdisabled-optimization</code>.</li>
     <li>Target-independent options <code>-falign-functions</code>,
         <code>-falign-loops</code> and <code>-falign-jumps</code>.</li>
-  </ul></li>
-  <li>Plus a great many bugfixes and almost all the <a
-  href="../gcc-2.95/features.html">features found in GCC 2.95</a>.</li>
+  </ul>
 
-  <li>Additional changes in GCC 3.0.1
+  <p>Plus a great many bugfixes and almost all the <a
+  href="../gcc-2.95/features.html">features found in GCC 2.95</a>.</p>
+
+<h2>Additional changes in GCC 3.0.1</h2>
+
   <ul>
     <li>C++ fixes for incorrect code-generation.</li>
     <li>Improved cross-compiling support for the C++ standard library.</li>
@@ -153,18 +163,20 @@
         not in GCC 3.0.</li>
     <li>Fixes for various exception-handling bugs.</li>
     <li>A port to the S/390 architecture.</li>
-  </ul></li>
+  </ul>
 
-  <li>Additional changes in GCC 3.0.2
+<h2>Additional changes in GCC 3.0.2</h2>
+
   <ul>
     <li>Fixes for bad code generation during loop unrolling.</li>
     <li>Fixes for bad code generation by the sibling call optimization.</li>
     <li>Minor improvements to x86 code generation.</li>
     <li>Implemenation of function descriptors in C++ vtables for IA64.</li>
     <li>Numerous minor bug-fixes.</li>
-  </ul></li>
+  </ul>
 
-  <li>Additional changes in GCC 3.0.3
+<h2>Additional changes in GCC 3.0.3</h2>
+
   <ul> 
     <li>A fix to correct an accidental change to the PowerPC ABI.</li>
     <li>Fixes for bad code generation on a variety of architectures.</li>
@@ -174,9 +186,10 @@
     <li>A fix to avoid crashes in the C++ demangler.</li>
     <li>A fix to the C++ standard library to avoid buffer overflows.</li>
     <li>Miscellaneous improvements for a variety of architectures.</li>
-  </ul></li>
+  </ul>
 
-  <li>Additional changes in GCC 3.0.4
+<h2>Additional changes in GCC 3.0.4</h2>
+
   <ul>
     <li>GCC 3.0 now supports newer versions of the <a
         href="http://www.netbsd.org/">NetBSD</a> operating system,
@@ -191,9 +204,7 @@
     <li>Documentation updates.</li>
     <li>Port of GCC to Tensilica's Xtensa processor contributed.</li>
     <li>A fix for compiling the PPC Linux kernel (FAT fs wouldn't link).</li>
-  </ul></li>
-
-</ul>
+  </ul>
 
 </body>
 </html>
