Fix XHTML 1.0 markup. By Andrea 'Fyre Wyzard' Bocci <fwyzard@inwind.it>.

--- a/htdocs/branching.html
+++ b/htdocs/branching.html
@@ -4,6 +4,7 @@
 <title>Branching for a GCC Release</title>
 </head>
 
+<body>
 <p>This page documents the procedure for making a new release branch.</p>
 
 <ol>
@@ -20,7 +21,7 @@ cvs rtag -b -r gcc-3_1-branchpoint gcc-3_1-branch gcc
 <li>Update <code>cvs.html</code> web page to list the new branch tags.</li>
 
 <li>Update all <code>[vV]ersion.c</code> files on the branch, to say
-&quot;prerelease&quto; instead of &quot;experimental&quot;.</li>
+&quot;prerelease&quot; instead of &quot;experimental&quot;.</li>
 
 <li>Update all <code>[vV]ersion.c</code> files on the mainline, to use
 the next major release number (e.g., 3.2 instead of 3.1).</li>
