--- a/htdocs/gcc-3.1/issues.html
+++ b/htdocs/gcc-3.1/issues.html
@@ -30,14 +30,14 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Franz Sirl.</p>
 </dd>
 
-<dt><em>PR 5753</em>
+<dt><em>PR 5753</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
 
  <p>Submitted by Peter Barada.</p>
 </dd>
 
-<dt><em>PR target/5626</em>
+<dt><em>PR target/5626</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
 
@@ -46,7 +46,7 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Brad Lucier.</p>
 </dd>
 
-<dt><em>PR target/5312</em>
+<dt><em>PR target/5312</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
 
@@ -55,7 +55,7 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Andreas Schwab.</p>
 </dd>
 
-<dt><em>PR ada/5856</em>
+<dt><em>PR ada/5856</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
 
@@ -64,7 +64,7 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Joseph Myers.</p>
 </dd>
 
-<dt><em>PR c/5354</em>
+<dt><em>PR c/5354</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
 
@@ -75,7 +75,7 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Jakub Jelinek.</p>
 </dd>
 
-<dt><em>PR c++/5857</em>
+<dt><em>PR c++/5857</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
 
@@ -84,7 +84,7 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Jakub Jelinek.</p>
 </dd>
 
-<dt><em>PR 5687</em>
+<dt><em>PR 5687</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
 
@@ -93,7 +93,7 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Philib Blundell.</p>
 </dd>
 
-<dt><em>PR 5817</em>
+<dt><em>PR 5817</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
 
@@ -102,7 +102,7 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Craig Rodrigues.</p>
 </dd>
 
-<dt><em>PR 5658</em>
+<dt><em>PR 5658</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
 
@@ -112,7 +112,7 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Craig Rodrigues.</p>
 </dd>
 
-<dt><em>PR 5597</em>
+<dt><em>PR 5597</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
 
@@ -126,7 +126,7 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Craig Rodrigues.</p>
 </dd>
 
-<dt><em>PR 5740</em>
+<dt><em>PR 5740</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
 
@@ -135,7 +135,7 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Benjamin Kosnik.</p>
 </dd>
 
-<dt><em>Optimization Issues</em>
+<dt><em>Optimization Issues</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
 
@@ -145,7 +145,7 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Benjamin Kosnik.</p>
 </dd>
 
-<dt><em>PR 5656</em>
+<dt><em>PR 5656</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
 
@@ -158,7 +158,7 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Craig Rodrigues.</p>
 </dd>
 
-<dt><em>PR 5863</em>
+<dt><em>PR 5863</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
 
@@ -167,7 +167,7 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Franz Sirl.</p>
 </dd>
 
-<dt><em>PR 5396</em>
+<dt><em>PR 5396</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
 
@@ -176,7 +176,7 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Stuart Anderson.</p>
 </dd>
 
-<dt><em>PR 5682</em>
+<dt><em>PR 5682</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
 
@@ -536,7 +536,7 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Theodore Papadopoulo.</p>
 </dd>
 
-<dt><em>PR 5659</em>
+<dt><em>PR 5659</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
 
