--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -43,8 +43,8 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc/2001-09/msg00536.html">3.0.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2001-12/msg00880.html">3.0.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00624.html">3.0.3</a>;
-<br>Successful (C, C++, F77, Java):
-<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01488.html">3.0.4</a></"td>
+<br />Successful (C, C++, F77, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01488.html">3.0.4</a></td>
 </tr>
 
 <tr>
@@ -161,7 +161,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>LFS 3.0 (Linux from Scratch), glibc 2.2.5, kernel 2.4.16</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01641.html">3.0.4</a>
-<br>Test results:
+<br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-02/msg00613.html">3.0.4</a>
 </td>
 </tr>
@@ -193,7 +193,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-07/msg00390.html">3.0</a>;
-<br>Successful (C, C++):
+<br />Successful (C, C++):
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01670.html">3.0.4</a></td>
 </tr>
 
@@ -203,11 +203,11 @@ Installing GCC: Final Installation</a>.</p>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-08/msg00193.html">3.0</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00621.html">3.0.3</a>;
-<br>Successful (C):
+<br />Successful (C):
 <a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01290.html">3.0.3</a>;
-<br>Successful (C, C++, F77, Java):
+<br />Successful (C, C++, F77, Java):
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01633.html">3.0.4</a>;
-<br>Successful (C, C++):
+<br />Successful (C, C++):
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01670.html">3.0.4</a>
 </td>
 </tr>
@@ -309,7 +309,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00610.html">3.0.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01581.html">3.0.4</a>;
-<br>Test results:
+<br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-02/msg00581.html">3.0.4</a>
 </td>
 </tr>
@@ -377,7 +377,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-07/msg00152.html">3.0</a>
-<br>Test results:
+<br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-02/msg00513.html">3.0.4</a>
 </td>
 </tr>
@@ -410,9 +410,9 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc/2001-11/msg00214.html">3.0.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00242.html">3.0.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01517.html">3.0.4</a>;
-<br>Unsuccessful:
+<br />Unsuccessful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-12/msg00363.html">3.0 and 3.0.1</a>;
-<br>Test results:
+<br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-02/msg00549.html">3.0.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-02/msg00487.html">3.0.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-02/msg00465.html">3.0.4</a>
@@ -452,7 +452,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>Cygwin-1.3.5-3 on Windows XP Professional</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00946.html">3.0.3</a>;
-<br>Successful with modifications:
+<br />Successful with modifications:
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg00119.html">3.0.3</a></td>
 </tr>
 
@@ -682,7 +682,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>Red Hat 7.2, glibc 2.2.4, kernel 2.4.17</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-03/msg00310.html">3.0.4</a>;
-<br>Successful (C, C++, ObjC):
+<br />Successful (C, C++, ObjC):
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01140.html">3.0.3</a></td>
 </tr>
 
@@ -806,7 +806,7 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc/2001-09/msg00863.html">3.0.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00281.html">3.0.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01623.html">3.0.4</a>;
-<br>Test results:
+<br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-02/msg00578.html">3.0.4</a>
 </td>
 </tr>
@@ -824,7 +824,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01024.html">3.0.1</a>
-<br>Test results:
+<br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-02/msg00498.html">3.0.4</a>
 </td>
 </tr>
@@ -837,9 +837,9 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01024.html">3.0.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00316.html">3.0.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01483.html">3.0.4</a>;
-<br>Successful (C,C++):
+<br />Successful (C,C++):
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01343.html">3.0.4</a>;
-<br>Test results:
+<br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-02/msg00576.html">3.0.4</a>
 </td>
 </tr>
@@ -960,9 +960,9 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc/2001-08/msg00842.html">3.0</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01024.html">3.0.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00338.html">3.0.3</a>;
-<br>Successful (C, C++, Java):
+<br />Successful (C, C++, Java):
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01622.html">3.0.4</a>;
-<br>Test results:
+<br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-02/msg00535.html">3.0.4</a>
 </td>
 </tr>
@@ -975,7 +975,7 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc/2001-08/msg01024.html">3.0.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00275.html">3.0.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01345.html">3.0.4</a>;
-<br>Test results:
+<br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-02/msg00497.html">3.0.4</a>
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-02/msg00536.html">3.0.4</a>,
 </td>
@@ -990,9 +990,9 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01173.html">3.0.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00289.html">3.0.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01345.html">3.0.4</a>;
-<br>Successful (C,C++):
+<br />Successful (C,C++):
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01343.html">3.0.4</a>;
-<br>Test results:
+<br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-02/msg00537.html">3.0.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-02/msg00467.html">3.0.4</a>
 </td>
