--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -398,6 +398,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i586-pc-linux-gnu</td>
+<td>Red Hat 6.0 plus changes; glibc 2.1.3; kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg00660.html">3.0.4</a></td>
+</tr>
+
+<tr>
+<td>i586-pc-linux-gnu</td>
 <td>Red Hat 7.0, glibc 2.1.92, kernel 2.2.16</td>
 <td>Successful (C, C++, ObjC, Java):
 <a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01405.html">3.0.3</a></td>
@@ -800,6 +807,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i686--pc-sco3.2v5.0.6</td>
+<td>SCO OpenServer 5.0.6, binutils 2.12</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg00727.html">3.0.4</a></td>
+</tr>
+
+<tr>
 <td>ia64-unknown-linux-gnu</td>
 <td>Red Hat 7.1.94, glibc 2.2.4</td>
 <td>Successful:
@@ -848,7 +862,16 @@ Installing GCC: Final Installation</a>.</p>
 <td>powerpc-ibm-aix4.2.1.0</td>
 <td>&nbsp;</td>
 <td>Successful (C and C++):
-<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg00127.html">3.0.2</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2001-12/msg00127.html">3.0.2</a>;
+<br />Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg00540.html">3.0.4></a></td>
+</tr>
+
+<tr>
+<td>powerpc-ibm-aix4.3.1.0</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg00716.html">3.0.4</a></td>
 </tr>
 
 <tr>
