--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -807,7 +807,7 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
-<td>i686--pc-sco3.2v5.0.6</td>
+<td>i686-pc-sco3.2v5.0.6</td>
 <td>SCO OpenServer 5.0.6, binutils 2.12</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-03/msg00727.html">3.0.4</a></td>
@@ -864,7 +864,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>Successful (C and C++):
 <a href="http://gcc.gnu.org/ml/gcc/2001-12/msg00127.html">3.0.2</a>;
 <br />Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg00540.html">3.0.4></a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg00540.html">3.0.4</a></td>
 </tr>
 
 <tr>
