--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -398,16 +398,16 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i586-pc-linux-gnu</td>
-<td>Red Hat 6.0 plus changes; glibc 2.1.3; kernel 2.4.18</td>
-<td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg00660.html">3.0.4</a></td>
-</tr>
-
-<tr>
-<td>i586-pc-linux-gnu</td>
 <td>Red Hat 7.0, glibc 2.1.92, kernel 2.2.16</td>
 <td>Successful (C, C++, ObjC, Java):
 <a href="http://gcc.gnu.org/ml/gcc/2001-12/msg01405.html">3.0.3</a></td>
+</tr>
+
+<tr>
+<td>i586-pc-linux-gnu (k6)</td>
+<td>Red Hat 6.0 plus changes; glibc 2.1.3; kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg00660.html">3.0.4</a></td>
 </tr>
 
 <tr>
