--- a/htdocs/gcc-3.1/issues.html
+++ b/htdocs/gcc-3.1/issues.html
@@ -37,24 +37,6 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Peter Barada.</p>
 </dd>
 
-<dt><em>PR target/5626</em></dt>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>GCC 3.1 on SparcV9 does not generate code for long jumps.</p>
-
- <p>Submitted by Brad Lucier.</p>
-</dd>
-
-<dt><em>PR target/5312</em></dt>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>Prevents compilation of the Linux kernel.</p>
-
- <p>Submitted by Andreas Schwab.</p>
-</dd>
-
 <dt><em>PR ada/5856</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
@@ -78,6 +60,8 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
 <dt><em>PR c++/5857</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
+
+ <p>Allegedly caused by a patch from Jason Merrill.  Reminded Jason.</p>
 
  <p>Regression from GCC 3.0.x.</p>
 
@@ -225,6 +209,8 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
 <dd>
  <p><em>Unverified.</em></p>
 
+ <p>Assigned to Mark Mitchell.</p>
+
  <p>Bad code generated with optimization.</p>
 
  <p>Submitted by Nathan Sidwell.</p>
@@ -347,7 +333,7 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Arati Dikey.</p>
 </dd>
 
-<dt><em>PR 5172</em></dt>
+<dt><em>PR 4792</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
 
@@ -356,45 +342,6 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Craig Rodrigues says this issue has been resolved.</p>
 
  <p>Submitted by Andreas Jaeger.</p>
-</dd>
-
-<dt><em>PR 5200</em></dt>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>Store motion bugs.</p>
-
- <p>Craig Rodrigues says this issue has been resolved.</p>
-
- <p>Submitted by Andreas Jaeger.</p>
-</dd>
-
-<dt><em>PR 5877</em></dt>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>Negative offsets cause inefficient code.  Optimization regression
- from 3.0.x.</p>
-
- <p>Submitted by Janis Johnson.</p>
-</dd>
-
-<dt><em>PR 5891</em></dt>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>ICE compiling SPEC fp with -funroll-loops on ia64.</p>
-
- <p>Submitted by Janis Johnson.</p>
-</dd>
-
-<dt><em>PR 5892</em></dt>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>ICE compiling ia64 Linux kernel.  Regression from GCC 3.0.4.</p>
-
- <p>Submitted by Janis Johnson.</p>
 </dd>
 
 <dt><em>PR 4792</em></dt>
@@ -487,15 +434,6 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Andreas Schwab.</p>
 </dd>
 
-<dt><em>PR 5901</em></dt>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>Miscompiling the Linux kernel.</p>
-
- <p>Submitted by Andreas Schwab.</p>
-</dd>
-
 <dt><em>PR 5757</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
@@ -538,12 +476,90 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
 
 <dt><em>PR 5659</em></dt>
 <dd>
- <p><em>Unverified.</em></p>
+ <p>Closed: Nathan Sidwell.</p>
 
  <p>Default access for class/struct bug.</p>
 
  <p>Submitted by Nathan Sidwell.</p>
 </dd>
+
+<dt><em>PR target/5626</em></dt>
+<dd>
+ <p>Closed: Jakub Jelinek</p>
+
+ <p>GCC 3.1 on SparcV9 does not generate code for long jumps.</p>
+
+ <p>Submitted by Brad Lucier.</p>
+</dd>
+
+<dt><em>PR target/5312</em></dt>
+<dd>
+ <p>Closed: Jakub Jelinek</p>
+
+ <p>Prevents compilation of the Linux kernel.</p>
+
+ <p>Submitted by Andreas Schwab.</p>
+</dd>
+
+<dt><em>PR 5172</em></dt>
+<dd>
+ <p>Closed: Jakub Jelinek</p>
+
+ <p>x86 glibc miscompilation.</p>
+
+ <p>Craig Rodrigues says this issue has been resolved.</p>
+
+ <p>Submitted by Andreas Jaeger.</p>
+</dd>
+
+<dt><em>PR 5200</em></dt>
+<dd>
+ <p>Closed: Jakub Jelinek</p>
+
+ <p>Store motion bugs.</p>
+
+ <p>Craig Rodrigues says this issue has been resolved.</p>
+
+ <p>Submitted by Andreas Jaeger.</p>
+</dd>
+
+<dt><em>PR 5877</em></dt>
+<dd>
+ <p>Closed: Jakub Jelinek</p>
+
+ <p>Negative offsets cause inefficient code.  Optimization regression
+ from 3.0.x.</p>
+
+ <p>Submitted by Janis Johnson.</p>
+</dd>
+
+<dt><em>PR 5891</em></dt>
+<dd>
+ <p>Closed: Jakub Jelinek</p>
+
+ <p>ICE compiling SPEC fp with -funroll-loops on ia64.</p>
+
+ <p>Submitted by Janis Johnson.</p>
+</dd>
+
+<dt><em>PR 5892</em></dt>
+<dd>
+ <p>Closed: Jakub Jelinek</p>
+
+ <p>ICE compiling ia64 Linux kernel.  Regression from GCC 3.0.4.</p>
+
+ <p>Submitted by Janis Johnson.</p>
+</dd>
+
+<dt><em>PR 5901</em></dt>
+<dd>
+ <p>Closed: Jakub Jelinek</p>
+
+ <p>Miscompiling the Linux kernel.</p>
+
+ <p>Submitted by Andreas Schwab.</p>
+</dd>
+
 
 </dl>
 
